# MEGO

./: .gitignore  README.md  requirements.txt
configs/: surrogate_ae.yaml  surrogate_mlp.yaml  surrogate_vae.yaml  surrogate_vae_mapping.yaml
data/dataset/anchor_selection/: 4p3v_trainParam.txt  5p2v_trainParam.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/botanical_garden/: cameras.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/boulders/: cameras.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/bridge/: cameras.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/door/: cameras.txt  images.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/exhibition_hall/: cameras.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/lecture_room/: cameras.txt  images.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/living_room/: cameras.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/lounge/: cameras.txt  images.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/observatory/: cameras.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/old_computer/: cameras.txt  images.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/statue/: cameras.txt  images.txt  points3D.txt
data/dataset/anchor_selection/multi_view_dslr_calibration_undistorted/terrace_2/: cameras.txt  images.txt  points3D.txt
data/dataset/com_imp/Facebook/: Facebook_EXP  Facebook_WC
data/dataset/com_imp/Facebook/seed/: 100_WC_seed  50_WC_seed  Facebook_EXP_100_seed  Facebook_EXP_50_seed  (+3 more)
data/dataset/com_imp/Wiki/: Wiki  Wiki_EXP  Wiki_WC
src/: decoder_mapping.py  experiment_build_surrogate.py  experiment_decoder_mapping.py  experiment_initial_solution.py  experiment_problem.py  experiment_problem_reclassify.py  statistic_all_result.py  types_.py
src/GA/: experiment_GA.py  simple_ga.py
src/SMAC/: SimpleSMAC.py  experiment_SMAC.py
src/SMARTEST/: SMARTEST.py  experiment_compiler_SMARTEST.py
src/cpp/anchor_selection/: CMakeLists.txt
src/cpp/anchor_selection/4p3v/: calculate_cover.cpp  calculate_cover.hpp  common_defination.hpp  evaluate_anchor.hpp  homotopy.hxx  interface.cpp  sample_instances.cpp  sample_instances.hpp
src/cpp/anchor_selection/5p2v/: calculate_cover.hpp  common_defination.hpp  evaluate_anchor.cpp  evaluate_anchor.hpp  homotopy.hxx  interface.cpp  sample_instances.hpp
src/cpp/com_imp/: CMakeLists.txt  README.md  pybind11.cmake  test_cpp.cmake  test_python.cmake
src/cpp/com_imp/algorithm/: comIMP.cpp  commonFun.cpp  commonFun.h  graph.h  head.cpp  head.h  sampler.h  strategy.cpp  strategy.h  timer.cpp
src/cpp/com_imp/evaluation/: imdb.tsv
src/cpp/com_imp/src/: comIMP.cpp  graph.cpp  sampler.cpp  sampler.h  serialize.h  strategy.cpp  strategy.h  timer.h
src/cpp/com_imp/test/: test.py
src/cpp/com_imp/wrap/: CMakeLists.txt  IMPWap.cpp  StrategyWap.cpp
src/hill_climbing/: experiment_hill_climbing.py  simple_hill_climbing.py
src/problem/: anchor_selection_problem.py  base_problem.py  com_influence_max_problem.py  compiler_args_selectionProblem.py  match_max_problem.py  max_cut_problem.py  zero_one_knapsack_problem.py
src/regression/: dataset.py  surrogate.py  surrogate_ae.py  surrogate_mlp.py  surrogate_vae.py
(+20 files in other folders)
